# narcissist

./: .editorconfig  CMakeLists.txt  LICENSE.txt  README.md
cmake/modules/: FindCryptoPP.cmake  Findsecp256k1.cmake
cmake/toolchains/: windows-mingw64.cmake
narcissist/: CMakeLists.txt  base58.c  bech32.c  bitcoin.cpp  narcissist.cpp  wif.cpp
narcissist-cli/: CMakeLists.txt  main.cpp
narcissist/include/narcissist/: base58.h  bech32.h  bitcoin.hpp  narcissist.hpp  wif.hpp
